# coalton

./: .gitattributes  .gitignore  CITATION.cff  Makefile  README.md  REFERENCES.md  bootstrap.coalton  coalton-asdf.asd  coalton-asdf.lisp  coalton-compatibility.asd  coalton-compiler.asd  coalton-empty.asd  coalton-mode.el  coalton.asd  flake.nix  pre-bootstrap.coalton
benchmarking/: README.md  benchmarking.lisp  package.lisp  printing.lisp
benchmarks/: README.md  big-float.lisp  cell.lisp  fibonacci.lisp  mapping.lisp  matrix.lisp  package.lisp  pi.lisp  seq.lisp
cffi/: README.md  aliases.lisp  boxes.lisp  complex.lisp  enums.lisp  functions.lisp  libraries.lisp  package.lisp  pointers.lisp  structs.lisp  types.lisp  utils.lisp
compat/: NOTES-coalton-compatibility.txt  abcl-fiasco-patch.lisp  abcl-precompiler-precompile-identity.lisp  build-test-configuration.lisp  compatibility-layer.lisp  x-build.lisp
docs/: README.md  adding-new-early-type.md  architecture.md  cl-style-guide.md  coalton-documentation-guide.md  coalton-file-system.md  coalton-lisp-interop.md  collections-guide.md  collections.md  configuring-coalton.md  function-call-benchmark-results.md  glossary.md  how-typeclasses-are-compiled.md  implementing-tests.md  intro-to-coalton-testing.md  intro-to-coalton.ja.md  intro-to-coalton.md  intro-to-coalton.ru.md  intro-to-coalton.ua.md  iterator-protocol.md  lib.tex  nix.ja.md  nix.md  package.md  (+4 more)
mine/mine-app/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
mine/mine-app/src-tauri/icons/: icon.icns
mine/mine-app/src-tauri/src/: lib.rs
(+1141 files in other folders)
